[package]
name = "aiosaber-beatsaver-cache"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
built = { version = "0.4.4", features = ["git2", "chrono", "semver"] }
tokio = { version = "1.6.0", features = ["full"] }
warp = "0.3.1"
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
log = "0.4.14"
env_logger = "0.8.3"
lazy_static = "1.4.0"
reqwest = { version = "0.11.2", features = ["json"] }
futures-util = "0.3.16"
chrono = { version = "0.4.19", features = ["serde"] }
thiserror = "1.0.26"
cache_loader_async = { version = "0.1.0", features = ["ttl-cache"] }
async-recursion = "0.3.2"

[target.'cfg(not(target_family = "windows"))'.dependencies]
jemallocator = "0.3.2"
jemalloc-ctl = "0.3.3"

[build-dependencies]
built = { version = "0.4.4" }

[profile.release]
debug = false
lto = true